# vcl

./: .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  conanfile.py  doxygen.cfg
.devcontainer/: Dockerfile  (+1 more)
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/distance/: CMakeLists.txt  main.cpp
src/benchmarks/eigen33correctness/: CMakeLists.txt  main.cpp
src/benchmarks/eigen33performance/: CMakeLists.txt  main.cpp
src/benchmarks/mutex/: CMakeLists.txt  main.cpp
src/benchmarks/rotation33correctness/: CMakeLists.txt  main.cpp
src/benchmarks/rotation33performance/: CMakeLists.txt  main.cpp
src/benchmarks/svd/: CMakeLists.txt  main.cpp
src/benchmarks/svd33correctness/: CMakeLists.txt  main.cpp
src/benchmarks/svd33performance/: CMakeLists.txt  main.cpp
src/benchmarks/vcl.core/: CMakeLists.txt  main.cpp
src/benchmarks/vcl.geometry/: CMakeLists.txt  main.cpp
src/benchmarks/vcl.math/: CMakeLists.txt  eigen33_correctness.cpp  eigen33_performance.cpp  problems.cpp  problems.h  rotation33_correctness.cpp  rotation33_performance.cpp  svd33_correctness.cpp  svd33_performance.cpp
src/cmake/: CodeCoverage.cmake  FetchDawn.cmake  FindEigen3.cmake  PrecompiledHeader.cmake  VCLClangTidy.cmake  VCLCompileCL.cmake  VCLCompileCUDA.cmake  VCLCompileGLSL.cmake  VCLCompileHLSL.cmake  VCLConanIntegration.cmake  VCLConfig.cmake  VCLCudaSupport.cmake  VCLLibrary.cmake  VCLOpenCLSupport.cmake  VCLTargets.cmake  VCLTest.cmake  VclCudaPackPtx.cmake  bin2c.cmake
src/examples/: CMakeLists.txt
src/examples/cuda/: CMakeLists.txt
src/examples/cuda/parallelkernels/: CMakeLists.txt  main.cpp  vectoradd.cu
src/examples/d3d12/: CMakeLists.txt
src/examples/d3d12/common/: app.cpp  app.h  imguiapp.cpp  imguiapp.h  xortexture.h
src/examples/d3d12/drawquad/: CMakeLists.txt  main.cpp  quad.vs.hlsl
src/examples/d3d12/drawtetmesh/: CMakeLists.txt  main.cpp  tetmesh.gs.hlsl  tetmesh.vs.hlsl  tettotrimesh.cs.hlsl  trimesh.vs.hlsl
src/examples/d3d12/gridcube/: CMakeLists.txt  main.cpp
src/examples/d3d12/imgui/: CMakeLists.txt  main.cpp
src/examples/fluids/: CMakeLists.txt  bitmap.h  main.cpp
src/examples/meshviewer/: CMakeLists.txt  ComponentListDelegate.qml  CreateBarDialog.qml  EntityListDelegate.qml  OpenMeshDialog.qml  SceneView.qml  gpusurfacemesh.cpp  gpusurfacemesh.h  gpuvolumemesh.cpp  gpuvolumemesh.h  main.cpp  main.qml  meshview.cpp  meshview.h  meshviewer.qrc  scene.cpp  scene.h
src/examples/opencl/: CMakeLists.txt
src/examples/opengl/: CMakeLists.txt
src/examples/rtti/: CMakeLists.txt  baseobject.cpp  baseobject.h  simple.cpp
src/examples/rtwturb/: CMakeLists.txt  main.cpp
src/examples/simd/: CMakeLists.txt
src/examples/spatial_accelleration_structures/: CMakeLists.txt  main.cpp
src/examples/vcl.core/: CMakeLists.txt  simd.cpp
src/examples/vulkan/: CMakeLists.txt
src/examples/webgpu/: CMakeLists.txt  example.html.in
src/libs/: CMakeLists.txt
src/libs/vcl.components/: CMakeLists.txt
src/libs/vcl.compute/: CMakeLists.txt
src/libs/vcl.compute.cuda/: CMakeLists.txt
src/libs/vcl.compute.opencl/: CMakeLists.txt
src/libs/vcl.core/: CMakeLists.txt  Module.dox
src/libs/vcl.core.cuda/: CMakeLists.txt
src/libs/vcl.core.opencl/: CMakeLists.txt
src/libs/vcl.geometry/: CMakeLists.txt
src/libs/vcl.graphics/: CMakeLists.txt
src/libs/vcl.math/: CMakeLists.txt
src/libs/vcl.math.cuda/: CMakeLists.txt
src/libs/vcl.math.opencl/: CMakeLists.txt
src/libs/vcl.physics.fluid/: CMakeLists.txt
src/tests/: CMakeLists.txt  vcl.test.html.in
src/tests/vcl.components/: CMakeLists.txt  entitymanager.cpp
src/tests/vcl.compute.cuda/: CMakeLists.txt  basic.cpp
src/tests/vcl.compute.opencl/: CMakeLists.txt  device.cpp
src/tests/vcl.core/: CMakeLists.txt  allocator.cpp  bitvector.cpp  bvh.cpp  convert.cpp  eigen_simd.cpp  enumerate.cpp  fixed.cpp  flags.cpp  fnv1a.cpp  gather.cpp  interleave.cpp  interleavedarray.cpp  intrinsics.cpp  load.cpp  math.cpp  minmax.cpp  mortoncode.cpp  octree.cpp  points.h  precompiled.cpp  precompiled.h  rtti.cpp  scatter.cpp  scopeguard.cpp  simd.cpp  smart_ptr.cpp  store.cpp  waveletnoise.cpp  waveletnoise_rnd.h
src/tests/vcl.geometry/: CMakeLists.txt  circle.cpp  delaunay.cpp  distance.cpp  distance_ref.h  halfedgemesh.cpp  halfedgetrimesh.cpp  halffacetetramesh.cpp  intersect.cpp  intersect_ray_tet.cpp  intersect_tet.cpp  liver_766.cpp  liver_766.h  obb.cpp  tetramesh.cpp
src/tests/vcl.graphics.d3d12/: CMakeLists.txt  buffers.cpp  compute.cpp  engine.cpp  main.cpp  quad.vs.hlsl  rendering.cpp  saxpy.cs.hlsl  swapchain.cpp  textures.cpp
src/tests/vcl.graphics.opengl/: CMakeLists.txt  bindings.cpp  bitmap.h  blendstate.cpp  buffers.cpp  depthstencilstate.cpp  engine.cpp  histogram.cpp  imageprocessor.cpp  inputlayout.cpp  main.cpp  pattern.h  quad.frag  quad.frag.spv.h  quad.vert.spv.h  radixsort.cpp  rasterstate.cpp  scan.cpp  shaderprogram.cpp  textures.cpp
src/tests/vcl.graphics.vulkan/: CMakeLists.txt  backbuffer.cpp  buffers.cpp  compute.cpp  context.cpp  descriptorset.cpp  quad.frag  quad.vert  saxpy.comp  shaderprogram.cpp  test.h
src/tests/vcl.graphics.webgpu/: CMakeLists.txt  buffers.cpp  main.cpp  quad.frag  quad.vert
src/tests/vcl.math/: CMakeLists.txt  cg.cpp  eigen33.cpp  jacobi.cpp  poisson.h  poisson1d.cpp  poisson2d.cpp  poisson3d.cpp  poldecomp33.cpp  precompiled.h  qr33.cpp  rotation33.cpp  svd33.cpp
src/tests/vcl.math.cuda/: CMakeLists.txt  cg_add.cpp  main.cpp  poisson.h  poisson3d.cpp  redux.cpp
src/tests/vcl.physics.fluid/: CMakeLists.txt  blockgrid.cu  grid.cpp  grid.cu  poissonsolver.cpp
src/tools/: CMakeLists.txt
src/tools/bin2c/: CMakeLists.txt  main.cpp
src/tools/clc/: CMakeLists.txt  main.cpp  nvidia.cpp  nvidia.h
src/tools/cuc/: CMakeLists.txt  kernelwrapper.cpp  kernelwrapper.h  main.cpp
src/tools/cui/: CMakeLists.txt  kernelwrapper.cpp  kernelwrapper.h  main.cpp
(+744 files in other folders)
